# functorial-algebras

./: .gitignore  README.md  functorial-algebras.cabal
src/: FunctorialAlgebras.hs  Scratch.hs  StateC.hs
src/FunctorialAlgebras/: NonDet.hs  ParallelComposition.hs  State.hs  ThrowCatch.hs
src/Next/: FunAlg.hs
src/SplitScopedProg/: FunAlg.hs
